Remove uneeded false
Can be undefined until true

--- a/public/index.html
+++ b/public/index.html
@@ -1010,7 +1010,7 @@
                                         <select class="slds-select" id="instore_code_1">
                                             <option value="no-code">No Code</option>
                                         </select>
-                                        <input type="hidden" id="instore_code_1_loyalty_promotion" value="false" />
+                                        <input type="hidden" id="instore_code_1_loyalty_promotion"/>
                                     </div>
                                 </div>
                             </div>
@@ -1070,7 +1070,7 @@
                                         <select class="slds-select" id="instore_code_2">
                                             <option value="no-code">No Code</option>
                                         </select>
-                                        <input type="hidden" id="instore_code_2_loyalty_promotion" value="false" />
+                                        <input type="hidden" id="instore_code_2_loyalty_promotion"/>
                                     </div>
                                 </div>
                             </div>
@@ -1130,7 +1130,7 @@
                                         <select class="slds-select" id="instore_code_3">
                                             <option value="no-code">No Code</option>
                                         </select>
-                                        <input type="hidden" id="instore_code_3_loyalty_promotion" value="false" />
+                                        <input type="hidden" id="instore_code_3_loyalty_promotion"/>
                                     </div>
                                 </div>
                             </div>
@@ -1190,7 +1190,7 @@
                                         <select class="slds-select" id="instore_code_4">
                                             <option value="no-code">No Code</option>
                                         </select>
-                                        <input type="hidden" id="instore_code_4_loyalty_promotion" value="false" />
+                                        <input type="hidden" id="instore_code_4_loyalty_promotion"/>
                                     </div>
                                 </div>
                             </div>
@@ -1250,7 +1250,7 @@
                                         <select class="slds-select" id="instore_code_5">
                                             <option value="no-code">No Code</option>
                                         </select>
-                                        <input type="hidden" id="instore_code_5_loyalty_promotion" value="false" />
+                                        <input type="hidden" id="instore_code_5_loyalty_promotion"/>
                                     </div>
                                 </div>
                             </div>
