--- a/public/index.html
+++ b/public/index.html
@@ -151,7 +151,7 @@
                             </span>
 
                             <span class="slds-radio">
-                                <input type="radio" class="promotion_type" id="radio-4" value="no_code" name="promotionType" />
+                                <input type="radio" class="promotion_type" id="radio-4" value="instore" name="promotionType" />
                                 <label class="slds-radio__label" for="radio-4">
                                     <span class="slds-radio_faux"></span>
                                     <span class="slds-form-element__label">No Code - Just a promotion association</span>
