--- a/public/index.html
+++ b/public/index.html
@@ -336,6 +336,8 @@
                                             <select class="slds-select" id="global_code_1">
                                                 <option value="no-code">No Code</option>
                                             </select>
+                                            <input type="hidden" id="global_code_1_valid_from" />
+                                            <input type="hidden" id="global_code_1_valid_to" />
                                         </div>
                                     </div>
                                 </div>
@@ -387,6 +389,8 @@
                                             <select class="slds-select" id="global_code_2">
                                                 <option value="no-code">No Code</option>
                                             </select>
+                                            <input type="hidden" id="global_code_2_valid_from" />
+                                            <input type="hidden" id="global_code_2_valid_to" />
                                         </div>
                                     </div>
                                 </div>
@@ -438,6 +442,8 @@
                                             <select class="slds-select" id="global_code_3">
                                                 <option value="no-code">No Code</option>
                                             </select>
+                                            <input type="hidden" id="global_code_3_valid_from" />
+                                            <input type="hidden" id="global_code_3_valid_to" />
                                         </div>
                                     </div>
                                 </div>
@@ -489,6 +495,8 @@
                                             <select class="slds-select" id="global_code_4">
                                                 <option value="no-code">No Code</option>
                                             </select>
+                                            <input type="hidden" id="global_code_4_valid_from" />
+                                            <input type="hidden" id="global_code_4_valid_to" />
                                         </div>
                                     </div>
                                 </div>
@@ -540,6 +548,8 @@
                                             <select class="slds-select" id="global_code_5">
                                                 <option value="no-code">No Code</option>
                                             </select>
+                                            <input type="hidden" id="global_code_5_valid_from" />
+                                            <input type="hidden" id="global_code_5_valid_to" />=
                                         </div>
                                     </div>
                                 </div>
@@ -1011,6 +1021,8 @@
                                             <option value="no-code">No Code</option>
                                         </select>
                                         <input type="hidden" id="instore_code_1_loyalty_promotion"/>
+                                        <input type="hidden" id="instore_code_1_valid_from" />
+                                        <input type="hidden" id="instore_code_1_valid_to" />
                                     </div>
                                 </div>
                             </div>
@@ -1071,6 +1083,8 @@
                                             <option value="no-code">No Code</option>
                                         </select>
                                         <input type="hidden" id="instore_code_2_loyalty_promotion"/>
+                                        <input type="hidden" id="instore_code_2_valid_from" />
+                                        <input type="hidden" id="instore_code_2_valid_to" />
                                     </div>
                                 </div>
                             </div>
@@ -1131,6 +1145,8 @@
                                             <option value="no-code">No Code</option>
                                         </select>
                                         <input type="hidden" id="instore_code_3_loyalty_promotion"/>
+                                        <input type="hidden" id="instore_code_3_valid_from" />
+                                        <input type="hidden" id="instore_code_3_valid_to" />
                                     </div>
                                 </div>
                             </div>
@@ -1191,6 +1207,8 @@
                                             <option value="no-code">No Code</option>
                                         </select>
                                         <input type="hidden" id="instore_code_4_loyalty_promotion"/>
+                                        <input type="hidden" id="instore_code_4_valid_from" />
+                                        <input type="hidden" id="instore_code_4_valid_to" />
                                     </div>
                                 </div>
                             </div>
@@ -1251,6 +1269,8 @@
                                             <option value="no-code">No Code</option>
                                         </select>
                                         <input type="hidden" id="instore_code_5_loyalty_promotion"/>
+                                        <input type="hidden" id="instore_code_5_valid_from" />
+                                        <input type="hidden" id="instore_code_5_valid_to" />
                                     </div>
                                 </div>
                             </div>
