--- a/public/index.html
+++ b/public/index.html
@@ -549,7 +549,7 @@
                                                 <option value="no-code">No Code</option>
                                             </select>
                                             <input type="hidden" id="global_code_5_valid_from" />
-                                            <input type="hidden" id="global_code_5_valid_to" />=
+                                            <input type="hidden" id="global_code_5_valid_to" />
                                         </div>
                                     </div>
                                 </div>
