--- a/public/index.html
+++ b/public/index.html
@@ -1388,7 +1388,7 @@
                     <div class="slds-card__body slds-card__body_inner">
                         <ul>
                             <li class="slds-m-vertical_xx-small"><button class="slds-button slds-button_stretch slds-button_success" id="control_action_optima">Send to Optima?</button></li>
-                            <li class="slds-m-vertical_xx-small"><button class="slds-button slds-button_stretch slds-button_brand" id="control_action_edit">Edit this promotion?</button></li>
+                            <!--<li class="slds-m-vertical_xx-small"><button class="slds-button slds-button_stretch slds-button_brand" id="control_action_edit">Edit this promotion?</button></li>-->
                             <li class="slds-m-vertical_xx-small"><button class="slds-button slds-button_stretch slds-button_destructive" id="control_action_remove">Remove this promotion?</button></li>
                         </ul>
                     </div>
