--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
             \/           \/|__|           
     -->
     <div id="step0" class="step">
+        <div id="promo_key_input"></div>
         <div id="step0alert" class="slds-notify slds-notify_alert slds-theme_alert-texture slds-theme_error" role="alert">
             <span class="slds-assistive-text">error</span>
             <span class="slds-icon_container slds-icon-utility-error slds-m-right_x-small" title="Description of icon when needed">
