--- a/public/index.html
+++ b/public/index.html
@@ -1390,7 +1390,7 @@
                         <ul>
                             <li class="slds-m-vertical_xx-small"><button class="slds-button slds-button_stretch slds-button_success" id="control_action_optima">Send to Optima?</button></li>
                             <!--<li class="slds-m-vertical_xx-small"><button class="slds-button slds-button_stretch slds-button_brand" id="control_action_edit">Edit this promotion?</button></li>-->
-                            <li class="slds-m-vertical_xx-small"><button class="slds-button slds-button_stretch slds-button_destructive" id="control_action_remove">Remove this promotion?</button></li>
+                            <!--<li class="slds-m-vertical_xx-small"><button class="slds-button slds-button_stretch slds-button_destructive" id="control_action_remove">Remove this promotion?</button></li>-->
                         </ul>
                     </div>
                 </article>
