--- a/public/index.html
+++ b/public/index.html
@@ -1522,7 +1522,7 @@
                                     </a>
                                 </h2>
                                 <div class="slds-card__body slds-card__body_inner">
-                                    <dl class="slds-list_horizontal slds-wrap" id="summary-online-setup">
+                                    <dl class="slds-list_horizontal slds-wrap">
                                         <dt class="slds-item_label slds-text-color_weak">Promotion Key</dt>
                                         <dd class="slds-item_detail" id="main_setup_key">Not currently set, please save and test.</dd>
                                     </dl>
