Couple of tweaks

--- a/public/index.html
+++ b/public/index.html
@@ -1069,7 +1069,7 @@
             </h2>
         </div>
         <div class="slds-grid slds-gutters">
-            <div id="instore_data" class="slds-col slds-size_1-of-2">
+            <div id="instore__meta_data" class="slds-col slds-size_1-of-2">
                 <div class="slds-box slds-box_xx-small slds-m-vertical_xx-small">
                     <h2>In-store Meta Data</h2>
                     <div class="slds-form-element sfmc-input">
@@ -1110,7 +1110,7 @@
                 </div>
             </div>
             <div id="instore_data" class="slds-col slds-size_1-of-2">
-                <div class="slds-box slds-box_xx-small slds-m-vertical_xx-small">
+                <div id="code1" class="slds-box slds-box_xx-small slds-m-vertical_xx-small">
                     <div class="slds-grid">
                         <div class="slds-col">
                             <div class="slds-form-element sfmc-input">
@@ -1180,7 +1180,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="slds-box slds-box_xx-small slds-m-vertical_xx-small">
+                <div id="code2" class="slds-box slds-box_xx-small slds-m-vertical_xx-small">
                     <div class="slds-grid">
                         <div class="slds-col">
                             <div class="slds-form-element sfmc-input">
@@ -1250,7 +1250,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="slds-box slds-box_xx-small slds-m-vertical_xx-small">
+                <div id="code3" class="slds-box slds-box_xx-small slds-m-vertical_xx-small">
                     <div class="slds-grid">
                         <div class="slds-col ">
                             <div class="slds-form-element sfmc-input">
@@ -1320,7 +1320,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="slds-box slds-box_xx-small slds-m-vertical_xx-small">
+                <div id="code4" class="slds-box slds-box_xx-small slds-m-vertical_xx-small">
                     <div class="slds-grid"> 
                         <div class="slds-col">
                             <div class="slds-form-element sfmc-input">
@@ -1390,7 +1390,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="slds-box slds-box_xx-small slds-m-vertical_xx-small">
+                <div id="code5" class="slds-box slds-box_xx-small slds-m-vertical_xx-small">
                     <div class="slds-grid">
                         <div class="slds-col">
                             <div class="slds-form-element sfmc-input">
