--- a/public/index.html
+++ b/public/index.html
@@ -1069,7 +1069,7 @@
             </h2>
         </div>
         <div class="slds-grid slds-gutters">
-            <div id="instore__meta_data" class="slds-col slds-size_1-of-2">
+            <div id="instore_data" class="slds-col slds-size_1-of-2">
                 <div class="slds-box slds-box_xx-small slds-m-vertical_xx-small">
                     <h2>In-store Meta Data</h2>
                     <div class="slds-form-element sfmc-input">
