--- a/public/index.html
+++ b/public/index.html
@@ -1532,9 +1532,8 @@
                     </div>
                     <div class="slds-card__body slds-card__body_inner">
                         <ul>
-                            <li class="slds-m-vertical_xx-small"><button class="slds-button slds-button_stretch slds-button_success" id="control_action_optima">GO LIVE (Send to Optima)</button></li>
+                            <li class="slds-m-vertical_xx-small"><button class="slds-button slds-button_stretch slds-button_success" id="control_action_optima">GO-LIVE</button></li>
                             <li class="slds-m-vertical_xx-small"><button class="slds-button slds-button_stretch slds-button_brand" id="control_action_test">Save and Test</button></li>
-                            <li class="slds-m-vertical_xx-small"><button class="slds-button slds-button_stretch slds-button_destructive" id="control_action_remove">Remove this promotion?</button></li>
                         </ul>
                     </div>
                 </article>
