--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
     <div id="step0" class="step">
         <div id="promo_key_input">
             <input type="hidden" id="promotion_key_hidden" />
+            <input type="hidden" id="promotion_state_hidden" />
             <input type="hidden" id="sent" />
         </div>
         <div id="step0alert" class="slds-notify slds-notify_alert slds-theme_alert-texture slds-theme_error" role="alert">
