Test new endpoints

--- a/public/index.html
+++ b/public/index.html
@@ -1544,6 +1544,7 @@
                     <div class="slds-card__body slds-card__body_inner">
                         <ul>
                             <li class="slds-m-vertical_xx-small"><button class="slds-button slds-button_stretch slds-button_success" disabled="" id="control_action_optima">GO-LIVE</button></li>
+                            <li class="slds-m-vertical_xx-small"><button class="slds-button slds-button_stretch slds-button_brand" disabled="" id="control_action_update">Update</button></li>
                             <li class="slds-m-vertical_xx-small"><button class="slds-button slds-button_stretch slds-button_brand" id="control_action_test">Save and Test</button></li>
                         </ul>
                     </div>
