--- a/public/index.html
+++ b/public/index.html
@@ -1636,6 +1636,7 @@
                                         <span>Control Group SQL</span>
                                     </a>
                                 </h2>
+                                <p>Copy and paste the below SQL into a new automation after the control group data extension has filled up with contacts</p>
                                 <p>
                                     SELECT<br>PARTY_ID,<br>GETDATE() AS CONTACT_DATE,<br>(SELECT PromoTable.communication_cell_id_control 
                                     FROM campaignPromotionAssociation_NEW_SIT as PromoTable WHERE PromoTable.control_group = '<span id="control_group_data_extension"></span>') as COMMUNICATION_CELL_ID<br>FROM<br><span id="control_group_data_extension"></span>
@@ -1663,6 +1664,7 @@
                                         <span>Association without a code</span>
                                     </a>
                                 </h2>
+                                <p>Copy and paste the below SQL into a new automation after the update contact data extension has filled up with contacts</p>
                                 <p>
                                     SELECT<br><span id="update_contact_data_extension"></span>.PARTY_ID,<br>PromoTable.MC_ID_1 as MC_UNIQUE_PROMOTION_ID,<br>GETDATE() as ASSIGNMENT_DATETIME<br>
                                     FROM<br><span id="update_contact_data_extension"></span> as UpdateContactDE<br>LEFT JOIN campaignPromotionAssociation_NEW_SIT as PromoTable<br>ON PromoTable.MC_ID_1 = <span id="update_contact_data_extension"></span>.PROMOTION_KEY
