--- a/public/index.html
+++ b/public/index.html
@@ -275,6 +275,19 @@
                         </div>
                         <div class="slds-form-element__help" id="form-error__campaign_code">This field is required</div>
                     </div>
+                    <div class="slds-form-element sfmc-input">
+                        <label class="slds-form-element__label" for="tooltip-showing-form-element-help-01">Update Contact</label>
+                        <div class="slds-form-element__control">
+                            <div class="slds-select_container">
+                                <select class="slds-select" id="channel">
+                                    <option value="1">DM</option>
+                                    <option selected value="2">EDM</option>
+                                    <option value="3">APP OFFER</option>
+                                    <option value="4">APP PUSH</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
