--- a/public/index.html
+++ b/public/index.html
@@ -276,7 +276,7 @@
                         <div class="slds-form-element__help" id="form-error__campaign_code">This field is required</div>
                     </div>
                     <div class="slds-form-element sfmc-input">
-                        <label class="slds-form-element__label" for="tooltip-showing-form-element-help-01">Update Contact</label>
+                        <label class="slds-form-element__label" for="tooltip-showing-form-element-help-01">Communication Channel</label>
                         <div class="slds-form-element__control">
                             <div class="slds-select_container">
                                 <select class="slds-select" id="channel">
